--- a/requirements.txt
+++ b/requirements.txt
@@ -19,18 +19,11 @@ requests==2.31.0
 sqlalchemy==2.0.30
 psycopg2-binary==2.9.9
 
-# Vector store and ML dependencies
+# Vector store dependencies
 pinecone-client==3.2.2
-sentence-transformers==2.6.1
-numpy==1.26.4
-torch==2.3.1
 
 # Data processing
 pandas==2.2.2
-
-# Web scraping dependencies (optional for deployment)
-selenium==4.20.0
-webdriver-manager==4.0.1
 
 # Additional utilities
 python-multipart==0.0.9
@@ -38,7 +31,3 @@ pydantic==2.11.7
 
 # Production dependencies
 gunicorn==21.2.0
-
-# Testing tools
-httpx==0.27.0
-pytest==8.1.1
